@startuml
'https://plantuml.com/class-diagram

abstract class MenuComponent {
    # name: String
    # level: int
    + add(menuComp: MenuComponent): void
    + remove(menuComp: MenuComponent): void
    + get(index: int): MenuComponent
    + {abstract} print(): void
}
class Menu {
    - List<MenuComponent> menuCompList = new ArrayList<MenuComponent>
    + add(menuComp: MenuComponent): void
    + remove(menuComp: MenuComponent): void
    + get(index: int): MenuComponent
    + print(): void
}
Menu -up-|> MenuComponent
MenuComponent --* Menu
class MenuItem {
    + print(): void
}
MenuItem -up-|> MenuComponent

@enduml